package-parser: Rewrite sol001 sol004 tosca stuff.